test/TestSuite/Syntax/Errors/no_own_resource_booking.tjp
project "Test" 2011-05-15 +1w {
  scenario s1 "S1" {
    scenario s2 "S2"
  }
  trackingscenario s1
}

resource r "R"
task t "T" {
  duration 2d
}

supplement resource r {
# MARK: error 15 no_own_resource_booking
  s2:booking t 2011-05-16-9:00 +2h
}
